instance_was.tf
# was 인스턴스 생성
resource "aws_instance" "was-instance" {
  ami                         = "ami-0d59ddf55cdda6e21"
  instance_type               = "t2.micro"
  key_name                    = "${aws_key_pair.was-key.key_name}"
  subnet_id                   = "${aws_subnet.project-pri-was-1.id}"
  vpc_security_group_ids      = ["${aws_security_group.project-vpc-was-sg.id}"]
  tags = {
    Name = "was-instance"
  }
}
